Convert CTA into two separate elements: one for collapsed and one for expanded. Fixes an IE10 issue where the CTA was remaining in a hovered state after being moved to a new location where the mouse was not hovering.

--- a/src/packages/modules/exploded-view-b2-x00/css/_responsive-exploded-view-b2-x00.scss
+++ b/src/packages/modules/exploded-view-b2-x00/css/_responsive-exploded-view-b2-x00.scss
@@ -191,9 +191,11 @@
     }
 
     .cta {
-      &.open {
-        right: auto;
-        left: 5%;
+      &.collapse {
+        &.open {
+          right: auto;
+          left: 5%;
+        }
       }
     }
 
@@ -310,15 +312,19 @@
     }
 
     .cta {
-      &.open {
-        width: $buttonOuterDiameter;
+      &.collapse {
+        &.open {
+          width: $buttonOuterDiameter;
+        }
       }
     }
 
     .no-touch & .cta {
-      &:hover {
-        .circle-btn {
-          right: $buttonHoverShift;
+      &.expand {
+        &:hover {
+          .circle-btn {
+            right: $buttonHoverShift;
+          }
         }
       }
     }
